<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_toolbar"
        android:background="@color/followers"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/alc_phase_1"
        app:titleMarginStart="40dp"
        app:logo="@drawable/ic_arrow_back_black_24dp"/>

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:fontFamily="@font/baloo"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="@dimen/WelcomeFontStyle"
        android:textStyle="bold" />

    <Button
        android:id="@+id/about_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FDAE30"
        android:text="@string/about_text"
        android:textSize="@dimen/ButtonFontStyle"
        android:fontFamily="@font/alfa_slab_one"/>

    <Button
        android:id="@+id/profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FDAE30"
        android:text="@string/profile_text"
        android:textSize="@dimen/ButtonFontStyle"
        android:fontFamily="@font/alfa_slab_one"/>


</LinearLayout>