<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_toolbar"
        android:background="@color/followers"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/profile_text"
        app:titleMarginStart="40dp"
        app:logo="@drawable/ic_arrow_back_black_24dp"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:background="@drawable/circle_border">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="9dp"
                android:adjustViewBounds="true"
                android:background="@drawable/circle"
                android:padding="3dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_user"
                android:contentDescription="@string/user_image" />

        </RelativeLayout>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgUser"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/mark_allen_gbalazeh"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/track_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name"
            android:layout_centerHorizontal="false"
            android:layout_marginStart="@dimen/WelcomeFontStyle"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/tienne"
            android:text="@string/track_name_android"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/country_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/track_text"
            android:layout_marginStart="@dimen/WelcomeFontStyle"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="false"
            android:fontFamily="@font/tienne"
            android:text="@string/country_liberia"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/country_txt"
            android:layout_centerHorizontal="false"
            android:layout_marginStart="@dimen/WelcomeFontStyle"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/tienne"
            android:text="@string/email_markcinogbalazeh_gmail_com"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/phone_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_txt"
            android:layout_centerHorizontal="false"
            android:layout_marginStart="@dimen/WelcomeFontStyle"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/tienne"
            android:text="@string/phone_number"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/slack_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_number_text"
            android:layout_centerHorizontal="false"
            android:layout_marginStart="@dimen/WelcomeFontStyle"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/tienne"
            android:text="@string/slack_name_markgbalazeh"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>


</ScrollView>


</RelativeLayout>